--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "prettier": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
+  },
+  "volta": {
+    "node": "18.17.1"
   }
 }
