--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^14.13.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.2",
+    "@types/express": "^4.17.17",
     "@types/node": "^20.5.1",
     "prettier": "^3.0.2",
     "ts-node": "^10.9.1",
