--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.395.0",
+    "@aws-sdk/client-textract": "^3.395.0",
+    "axios": "^1.4.0",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2"
@@ -20,6 +23,7 @@
     "@tsconfig/recommended": "^1.0.2",
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.1",
+    "@types/uuid": "^9.0.2",
     "prettier": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
