--- a/discord-bot/package.json
+++ b/discord-bot/package.json
@@ -16,12 +16,14 @@
     "axios": "^1.4.0",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.2",
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.1",
+    "@types/sqlite3": "^3.1.8",
     "@types/uuid": "^9.0.2",
     "prettier": "^3.0.2",
     "ts-node": "^10.9.1",
