--- a/pyscraper/Dockerfile
+++ b/pyscraper/Dockerfile
@@ -8,4 +8,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
+RUN mkdir -p static/uploads
+
 CMD [ "python", "./upload-service.py" ]
