--- a/discord-bot/package.json
+++ b/discord-bot/package.json
@@ -14,16 +14,16 @@
     "@aws-sdk/client-s3": "^3.395.0",
     "@aws-sdk/client-textract": "^3.395.0",
     "axios": "^1.4.0",
+    "better-sqlite3": "^8.5.2",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "sqlite3": "^5.1.6"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.2",
+    "@types/better-sqlite3": "^7.6.4",
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.1",
-    "@types/sqlite3": "^3.1.8",
     "@types/uuid": "^9.0.2",
     "prettier": "^3.0.2",
     "ts-node": "^10.9.1",
