remove file from static/uploads after upload to s3

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
   "prettier.configPath": "discord-bot/.prettierrc.js",
   "prettier.prettierPath": "discord-bot/node_modules/prettier",
   "editor.formatOnSave": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode"
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "[python]": {
+    "editor.defaultFormatter": null
+  }
 }
