--- a/discord-bot/package.json
+++ b/discord-bot/package.json
@@ -4,35 +4,21 @@
   "version": "1.0.0",
   "main": "./dist/index.js",
   "scripts": {
-    "start": "ts-node src/index.ts",
-    "start:prod": "ts-node --transpile-only src/index.ts",
-    "deploy": "ts-node src/deploy-commands.ts",
+    "start": "bun src/index.ts",
+    "deploy": "bun src/deploy-commands.ts",
     "format": "prettier . --write"
   },
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.395.0",
     "@aws-sdk/client-textract": "^3.395.0",
-    "axios": "^1.4.0",
-    "better-sqlite3": "^8.5.2",
     "discord.js": "^14.13.0",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
-    "@tsconfig/recommended": "^1.0.2",
-    "@types/better-sqlite3": "^7.6.4",
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.5.1",
-    "@types/uuid": "^9.0.2",
+    "@tsconfig/bun": "^1.0.0",
+    "bun-types": "^1.0.1",
     "prettier": "^3.0.2",
-    "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
-  },
-  "volta": {
-    "node": "16.20.2"
-  },
-  "engines": {
-    "node": "16.x"
   }
 }
