--- a/discord-bot/tsconfig.json
+++ b/discord-bot/tsconfig.json
@@ -1,7 +1,7 @@
 {
-  "extends": "@tsconfig/recommended/tsconfig.json",
+  "extends": "@tsconfig/bun/tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "outDir": "dist",
   },
   "include": ["src/**/*.ts"]
 }
